feat : deploy.sh -o / feat : EnvironmentVariables -o / TEST : redis trial -x

--- a/.github/workflows/prod-Multi-Module CI-CD.yml
+++ b/.github/workflows/prod-Multi-Module CI-CD.yml
@@ -140,7 +140,7 @@ jobs:
           BATCH_REPOSITORY_URI: ${{ secrets.COMMON_REPOSITORY_URI }}
         run: |
           ssh -o StrictHostKeyChecking=no "$EC2_USER@$EC2_HOST" << 'EOF'
-            docker pull $BATCH_REPOSITORY_URI
+            docker pull $BATCH_REPOSITORY_URI:$IMAGE_TAG
             docker stop batch-container || true
             docker rm batch-container || true
             docker run -d --name batch-container -p 8082:8082 $COMMON_REPOSITORY_URI:$IMAGE_TAG
