--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,11 @@ subprojects {
         testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
         implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+        // redis
+        implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+        implementation 'org.springframework.boot:spring-boot-starter-cache'
+        implementation 'org.redisson:redisson-spring-boot-starter:3.37.0'
+
         //security
         implementation 'org.springframework.boot:spring-boot-starter-security'
         testImplementation 'org.springframework.security:spring-security-test'
