--- a/docker-compose.es.yml
+++ b/docker-compose.es.yml
@@ -6,14 +6,14 @@ services:
     environment:
       - discovery.type=single-node
       - cluster.name=elasticsearch
-      - ES_JAVA_OPTS=-Xms512m -Xmx512m  # 메모리 설정 (필요시 조정)
+      - ES_JAVA_OPTS=-Xms512m -Xmx512m
     ports:
-      - "9200:9200"  # Elasticsearch REST API 접속
-      - "9300:9300"  # 클러스터 통신 포트
+      - "9200:9200"
+      - "9300:9300"
     networks:
       - elastic-network
     volumes:
-      - data:/usr/share/elasticsearch/data  # 데이터 영속화
+      - data:/usr/share/elasticsearch/data
     command: >
       bash -c '
         bin/elasticsearch-plugin install --batch analysis-nori;
@@ -26,7 +26,7 @@ services:
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
     ports:
-      - "5601:5601"  # Kibana 접속 포트
+      - "5601:5601"
     networks:
       - elastic-network
     depends_on:
