feat: 이메일인증 비밀번호 리셋 기능 추가

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -25,6 +25,9 @@ dependencies {
     //kafka
     implementation 'org.springframework.kafka:spring-kafka'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
+
+    //gmail
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.named('bootJar') {
