--- a/service/build.gradle
+++ b/service/build.gradle
@@ -22,6 +22,9 @@ dependencies {
     compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
+
+    //gmail
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.named('bootJar') {
