--- a/user/build.gradle
+++ b/user/build.gradle
@@ -7,6 +7,9 @@ dependencies {
 
     //aws s3
     implementation 'software.amazon.awssdk:s3:2.20.0'
+
+    //gmail
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.named('bootJar') {
