feat : config server 테스트 완료, 환경변수 kafka, slack 적용성공

--- a/.github/workflows/prod-Multi-Module CI-CD.yml
+++ b/.github/workflows/prod-Multi-Module CI-CD.yml
@@ -143,5 +143,5 @@ jobs:
             docker pull $BATCH_REPOSITORY_URI
             docker stop batch-container || true
             docker rm batch-container || true
-            docker run -d --name batch-container -p 8082:8082 $COMMON_REPOSITORY_URI:$IMAGE_TAG
+            docker run -d --name batch-container -p 8082:8082 \$COMMON_REPOSITORY_URI:$IMAGE_TAG
           EOF
