--- a/module-common/src/main/resources/application-local.yml
+++ b/module-common/src/main/resources/application-local.yml
@@ -1,69 +1,5 @@
 spring:
+  application:
+    name: common-server
   config:
-    import: optional:file:.env[.properties]
-
-  datasource:
-    url: ${LOCAL_DB_URL}
-    username: ${LOCAL_DB_USERNAME}
-    password: ${LOCAL_DB_PASSWORD}
-    driver-class-name: com.mysql.cj.jdbc.Driver
-
-  servlet:
-    multipart:
-      enabled: true
-      max-file-size: 5MB
-      max-request-size: 5MB
-
-  jpa:
-    hibernate:
-      ddl-auto: update
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQLDialect
-        show_sql: true
-        format_sql: true
-        use_sql_comments: true
-
-  elasticsearch:
-    uris: ${ELASTIC_URIS}
-    username: ${ELASTIC_USERNAME}
-    password: ${ELASTIC_PASSWORD}
-
----
-spring:
-  data:
-    redis:
-      host: localhost
-      port: 6379
-  kafka:
-    bootstrap-servers: ${KAFKA_PORT}
-    consumer:
-      group-id: notification-group
-      auto-offset-reset: earliest
-      enable-auto-commit: false
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
-      properties:
-        spring.json.trusted.packages: "*"
-
-
-admin:
-  token: ${ADMIN_TOKEN}
-
-owner:
-  token: ${OWNER_TOKEN}
-
-kakao:
-  client:
-    id: ${KAKAO_CLIENT_ID}
-    secret: ${KAKAO_CLIENT_SECRET}
-    redirect: ${KAKAO_REDIRECT_URL}
-  api:
-    key: ${KAKAO_REST_API_KEY}
-
-kakaopay:
-  secret: ${KAKAOPAY_SECRET}
-
-
- 
-
+    import: optional:configserver:http://localhost:18089
