--- a/.github/workflows/dev-Multi-Module CI-CD.yml
+++ b/.github/workflows/dev-Multi-Module CI-CD.yml
@@ -47,7 +47,7 @@ jobs:
 
       # Gradle 빌드 추가
       - name: Build with Gradle
-        run: ./gradlew :module-batch:build
+        run: ./gradlew :module-batch:build #바꿔야됨
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -57,38 +57,23 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
-          ECR_BATCH_LOGIN_URI : ${{secrets.ECR_COMMON_LOGIN_URI}}
+          ECR_BATCH_LOGIN_URI : ${{secrets.ECR_COMMON_LOGIN_URI}} #바꿔야됨
+        #바꿔야됨
         run: |
-          aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ECR_BATCH_LOGIN_URI
+          aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ECR_BATCH_LOGIN_URI  
 
-      # Docker 이미지를 빌드하고 멀티 플랫폼으로 푸시
-      - name: Build and push multi-platform image to ECR
+      # Docker 이미지를 빌드하고 푸시
+      - name: Build and push image to ECR
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: ./module-common/Dockerfile
-          platforms: linux/amd64,linux/arm64
+          file: ./module-common/Dockerfile #바꿔야됨
           push: true
-          tags: ${{ secrets.BATCH_REPOSITORY_URI }}:${{secrets.IMAGE_TAG}}
+          tags: ${{ secrets.BATCH_REPOSITORY_URI }}:${{secrets.IMAGE_TAG}} #바꿔야됨
 
-      - name: Start SSH Agent and Add Key
-        uses: webfactory/ssh-agent@v0.5.3
-        with:
-          ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
 
-      - name: Deploy Batch to EC2
-        env:
-          EC2_HOST: ${{ secrets.EC2_HOST }} #EC2 HOST 종류 선택
-          EC2_USER: ${{ secrets.EC2_USER }}
-          BATCH_REPOSITORY_URI: ${{ secrets.BATCH_REPOSITORY_URI }}
-          IMAGE_TAG : ${{secrets.IMAGE_TAG}}
-        run: |
-          ssh -o StrictHostKeyChecking=no "$EC2_USER@$EC2_HOST"
-            docker pull $BATCH_REPOSITORY_URI:$IMAGE_TAG
-            docker stop batch-container || true
-            docker rm batch-container || true
-            docker run -d --name batch-container -p 8081:8081 $BATCH_REPOSITORY_URI:/$IMAGE_TAG
-          
+
+
 
   build-and-deploy-common:
     needs: changes
