--- a/.github/workflows/dev-Multi-Module CI-CD.yml
+++ b/.github/workflows/dev-Multi-Module CI-CD.yml
@@ -27,9 +27,9 @@ jobs:
         with:
           filters: |
             common:
-              - 'module-common/**'
+              - 'common/**'
             batch:
-              - 'module-batch/**'
+              - 'batch/**'
 
   build-and-deploy-batch:
     needs: changes
