--- a/.github/workflows/dev-Multi-Module CI-CD.yml
+++ b/.github/workflows/dev-Multi-Module CI-CD.yml
@@ -106,12 +106,11 @@ jobs:
           aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ECR_COMMON_LOGIN_URI
 
       # Docker 이미지를 빌드하고 멀티 플랫폼으로 푸시
-      - name: Build and push multi-platform image to ECR
+      - name: Build and push image to ECR
         uses: docker/build-push-action@v3
         with:
           context: .
           file: ./common/Dockerfile
-          platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ secrets.COMMON_REPOSITORY_URI }}:${{secrets.IMAGE_TAG}}
 
