--- a/auction/Dockerfile
+++ b/auction/Dockerfile
@@ -7,7 +7,7 @@ RUN ./gradlew :auction:bootJar --no-daemon
 # 2단계: 최종 실행 이미지 생성
 FROM eclipse-temurin:17-jdk-jammy
 WORKDIR /app
-COPY --from=builder /app/*.jar common.jar
+COPY --from=builder /app/*.jar auction.jar
 
 # 실행 명령어
-ENTRYPOINT ["java", "-jar", "common.jar"]
+ENTRYPOINT ["java", "-jar", "auction.jar"]
