--- a/.github/workflows/prod-Multi-Module CI-CD.yml
+++ b/.github/workflows/prod-Multi-Module CI-CD.yml
@@ -1,5 +1,3 @@
-
-
 name: Prod-Multi-Module Build and Deploy
 
 on:
@@ -15,21 +13,73 @@ jobs:
   changes:
     runs-on: ubuntu-latest
     env:
-      SPRING_PROFILES_ACTIVE: "prod"
+      SPRING_PROFILES_ACTIVE: "main"
 
     outputs:
+      auction: ${{ steps.filter.outputs.auction }}
+      batch: ${{ steps.filter.outputs.batch }}
       common: ${{ steps.filter.outputs.common }}
-      batch: ${{ steps.filter.outputs.job }}
+      notification: ${{ steps.filter.outputs.notification }}
+      service: ${{ steps.filter.outputs.service }}
+      user: ${{ steps.filter.outputs.user }}
     steps:
       - uses: actions/checkout@v3
       - uses: dorny/paths-filter@v2
         id: filter
         with:
           filters: |
-            common:
-              - 'module-common/**'
+            auction:
+              - 'auction/**'
             batch:
-              - 'module-batch/**'
+              - 'batch/**'
+            common:
+              - 'common/**'
+            notification:
+              - 'notification/**'
+            service:
+              - 'service/**'
+            user:
+              - 'user/**'
+
+
+  build-and-deploy-auction:
+    needs: changes
+    if: ${{ needs.changes.outputs.auction == 'true' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      # Gradle 빌드 추가
+      - name: Build with Gradle
+        run: ./gradlew :auction:build -x test
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to Amazon ECR
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          ECR_LOGIN_URI: ${{secrets.ECR_AUCTION_LOGIN_URI}}
+        run: |
+          aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ECR_LOGIN_URI
+
+      # Docker 이미지를 빌드하고 푸시
+      - name: Build and push image to ECR
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./auction/Dockerfile
+          push: true
+          tags: ${{ secrets.AUCTION_REPOSITORY_URI }}:main
 
   build-and-deploy-batch:
     needs: changes
@@ -47,7 +97,7 @@ jobs:
 
       # Gradle 빌드 추가
       - name: Build with Gradle
-        run: ./gradlew :module-batch:build
+        run: ./gradlew :batch:build -x test
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -57,37 +107,18 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
+          ECR_LOGIN_URI : ${{secrets.ECR_COMMON_LOGIN_URI}}
         run: |
-          aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin ${{ secrets.BATCH_REPOSITORY_URI }}
+          aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ECR_LOGIN_URI  
 
-      # Docker 이미지를 빌드하고 멀티 플랫폼으로 푸시
-      - name: Build and push multi-platform image to ECR
+      # Docker 이미지를 빌드하고 푸시
+      - name: Build and push image to ECR
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: ./module-batch/Dockerfile
-          platforms: linux/amd64,linux/arm64
+          file: ./common/Dockerfile
           push: true
-          tags: ${{ secrets.BATCH_REPOSITORY_URI }}
-
-      - name: Start SSH Agent and Add Key
-        uses: webfactory/ssh-agent@v0.5.3
-        with:
-          ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
-
-      - name: Deploy Batch to EC2
-        env:
-          EC2_HOST: ${{ secrets.EC2_HOST }} #EC2 HOST 종류 선택
-          EC2_USER: ${{ secrets.EC2_USER }}
-          BATCH_REPOSITORY_URI: ${{ secrets.BATCH_REPOSITORY_URI }}
-        run: |
-          ssh -o StrictHostKeyChecking=no "$EC2_USER@$EC2_HOST" << 'EOF'
-            docker pull $BATCH_REPOSITORY_URI
-            docker stop batch-container || true
-            docker rm batch-container || true
-            docker run -d --name batch-container -p 8081:8081 $BATCH_REPOSITORY_URI:$IMAGE_TAG
-          EOF
-    
+          tags: ${{ secrets.BATCH_REPOSITORY_URI }}:main
 
   build-and-deploy-common:
     needs: changes
@@ -105,7 +136,7 @@ jobs:
 
       # Gradle 빌드 추가
       - name: Build with Gradle
-        run: ./gradlew :module-batch:build
+        run: ./gradlew :common:build -x test
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -115,33 +146,132 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
+          ECR_LOGIN_URI : ${{secrets.ECR_COMMON_LOGIN_URI}}
         run: |
-          aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin ${{ secrets.COMMON_REPOSITORY_URI }}
+          aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ECR_LOGIN_URI
 
-      # Docker 이미지를 빌드하고 멀티 플랫폼으로 푸시
-      - name: Build and push multi-platform image to ECR
+      # Docker 이미지를 빌드하고 푸시
+      - name: Build and push image to ECR
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: ./module-batch/Dockerfile
-          platforms: linux/amd64,linux/arm64
+          file: ./common/Dockerfile
           push: true
-          tags: ${{ secrets.COMMON_REPOSITORY_URI }}
+          tags: ${{ secrets.COMMON_REPOSITORY_URI }}:main
 
-      - name: Start SSH Agent and Add Key
-        uses: webfactory/ssh-agent@v0.5.3
+  build-and-deploy-notification:
+    needs: changes
+    if: ${{ needs.changes.outputs.notification == 'true' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
+          distribution: 'temurin'
+          java-version: '17'
 
-      - name: Deploy Common to EC2
+      # Gradle 빌드 추가
+      - name: Build with Gradle
+        run: ./gradlew :notification:build -x test
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to Amazon ECR
         env:
-          EC2_HOST: ${{ secrets.EC2_HOST }} #EC2 HOST 종류 선택
-          EC2_USER: ${{ secrets.EC2_USER }}
-          BATCH_REPOSITORY_URI: ${{ secrets.COMMON_REPOSITORY_URI }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          ECR_LOGIN_URI: ${{secrets.ECR_NOTIFICATION_LOGIN_URI}}
         run: |
-          ssh -o StrictHostKeyChecking=no "$EC2_USER@$EC2_HOST" << 'EOF'
-            docker pull $BATCH_REPOSITORY_URI
-            docker stop batch-container || true
-            docker rm batch-container || true
-            docker run -d --name batch-container -p 8082:8082 $COMMON_REPOSITORY_URI:$IMAGE_TAG
-          EOF
+          aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ECR_LOGIN_URI
+
+      # Docker 이미지를 빌드하고 푸시
+      - name: Build and push image to ECR
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./notification/Dockerfile
+          push: true
+          tags: ${{ secrets.NOTIFICATION_REPOSITORY_URI }}:main
+
+  build-and-deploy-service:
+    needs: changes
+    if: ${{ needs.changes.outputs.service == 'true' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      # Gradle 빌드 추가
+      - name: Build with Gradle
+        run: ./gradlew :service:build -x test
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to Amazon ECR
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          ECR_LOGIN_URI: ${{secrets.ECR_SERVICE_LOGIN_URI}}
+        run: |
+          aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ECR_LOGIN_URI
+
+      # Docker 이미지를 빌드하고 푸시
+      - name: Build and push image to ECR
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./service/Dockerfile
+          push: true
+          tags: ${{ secrets.SERVICE_REPOSITORY_URI }}:main
+
+  build-and-deploy-user:
+    needs: changes
+    if: ${{ needs.changes.outputs.user == 'true' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      # Gradle 빌드 추가
+      - name: Build with Gradle
+        run: ./gradlew :user:build -x test
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to Amazon ECR
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          ECR_LOGIN_URI: ${{secrets.ECR_USER_LOGIN_URI}}
+        run: |
+          aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ECR_LOGIN_URI
+
+      # Docker 이미지를 빌드하고 푸시
+      - name: Build and push image to ECR
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./user/Dockerfile
+          push: true
+          tags: ${{ secrets.USER_REPOSITORY_URI }}:main
