--- a/service/build.gradle
+++ b/service/build.gradle
@@ -7,6 +7,10 @@ dependencies {
     api project(':notification')
     api project(':user')
 
+    //kafka
+    implementation 'org.springframework.kafka:spring-kafka'
+    testImplementation 'org.springframework.kafka:spring-kafka-test'
+
     // elasticsearch
     implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
     implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.17.3'
