--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ subprojects {
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
         testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
         implementation 'org.springframework.boot:spring-boot-starter-validation'
+        testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
 
         // redis
         implementation 'org.springframework.boot:spring-boot-starter-data-redis'
